--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
           <input type="email" placeholder="Enter your email" />
           <button>Notify Me</button>
         <!-- <button>Back to Homepage</button>-->
+
+            <!-- <button> Back -->
           
         </div>
       </div>
